--- a/src/styles/blocks/result.scss
+++ b/src/styles/blocks/result.scss
@@ -67,5 +67,8 @@
 		h2 {
 			font-size: 34px;
 		}
+		&_top-list {
+			padding-left: 0;
+		}
 	}
 }
