--- a/src/styles/blocks/use.scss
+++ b/src/styles/blocks/use.scss
@@ -57,5 +57,8 @@
 			width: 100%;
 		}
 
+		&_instruction {
+			width: 87%;
+		}
 	}
 }
