--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,6 +51,6 @@ body {
 
 @media screen and (max-width: 480px) { 
     .block-header { 
-        font-size: 32px;
+        font-size: 28px;
     }
 }
